# relation-aware-3d-grounding

./: .env.example  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  reproduction_stage_comparison.json  reproduction_stage_comparison.md  reproduction_stage_comparison_with_encoder.json  reproduction_stage_comparison_with_encoder.md  requirements.txt  scene_disjoint_split_validation.json  split_distribution_comparison.json  training_protocol_ablation.json  training_protocol_ablation.md
.agent/: START_HERE.md
.claude/: CURRENT_STATUS.md  NEXT_TASK.md  PROJECT_CONTEXT.md  VERSION_3_TARGET.md  WORKING_RULES.md  settings.json
configs/: cover3d_referit_wrapper.yaml  cover3d_smoke.yaml  implicit_relation_v3.yaml  implicit_relation_v3_resume.yaml  sat_baseline.yaml
course-line/: CLAIM_BOUNDARY.md  COURSE_LINE_POSITIONING.md  COURSE_LINE_TODO.md  FINAL_PROJECT_EVIDENCE_MAP.md  MAIN_TABLE_PLAN.md  PRESENTATION_PLAN.md  QUAL_CASES_PLAN.md  README.md  REPRODUCIBILITY_NOTES.md  csc6133_diagnostic_report.tex
docs/: COURSE_REPORT_INDEX.md  CSC6133_Upgraded_3D_Spatial_Reasoning_Blueprint_CheCheng.docx  DATASET_SETUP.md  cover3d_related_work_positioning.md  development-roadmap.md
prompts/: resume_agent_prompt.md  verify_packet_prompt.md
reports/: README.md  baseline_reproduction_audit.md  bc_multiseed_claim_check.md  bert_feature_wiring.md  calibration_comparison_table.csv  calibration_controlled_rerun.md  calibration_failure_analysis.md  calibration_redesign_log.md  checkpoint_selection_note.md  clean_baseline_repair_log.md  combined_eval_fix_note.md  (+159 more)
(+1210 files in other folders)
